--- a/app/components/Auction/List/auctionListView.html
+++ b/app/components/Auction/List/auctionListView.html
@@ -3,7 +3,18 @@
     <h1>
         {{'texts.auction.auction_list' | i18next}}
         <span class="heading-right sorting-bar">
-            <span class="select_auction_template">
+
+            <span ng-show="!filterOpen" class="opener" ng-click="toggleSearch()">
+                <span class="normal-icon glyphicon glyphicon-search"></span>
+                {{'texts.search.advanced' | i18next}}
+            </span>
+            <span ng-show="filterOpen" class="opener" ng-click="resetSearch()">
+                <span class="red normal-icon glyphicon glyphicon-remove"></span>
+                {{'texts.search.cancel' | i18next}}
+            </span>
+            <span class="divider menu-divider"></span>
+            <span style="display: inline-block">
+                <span class="select_auction_template">
               <label>{{'texts.sorting.label' | i18next}}</label>
             </span>
             <span class="btn-group">
@@ -42,20 +53,20 @@
                     </div>
                 </div>
             </span>
+            </span>
         </span>
     </h1>
     <div class="auction-filter col-xs-12 col-sm-12 col-md-12 col-lg-12">
-        <div class="opener text-center" ng-click="toggleSearch()">Podrobné filtrování</div>
-        <form name="searchAuctionList" novalidate>
+        <form name="searchAuctionList" ng-open="formLabels('searchAuctionList')" novalidate>
             <div class="advanced-filter row">
                 <div class="col-md-4">
                     <div class="form-group">
-                        <input ng-model="search.minPrice" class="form-control my-input" placeholder="{{'texts.search.minPrice' | i18next}}" />
+                        <input ng-model="search.address_from" class="form-control my-input" placeholder="{{'texts.auction.from' | i18next}}" />
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="form-group">
-                        <input ng-model="search.maxPrice" type="number" class="form-control my-input" placeholder="{{'texts.search.maxPrice' | i18next}}" />
+                        <input ng-model="search.address_to" class="form-control my-input" placeholder="{{'texts.auction.to' | i18next}}" />
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -75,23 +86,26 @@
                 </div>
                 <div class="col-md-4">
                     <div class="form-group">
-                        <input ng-model="search.address_from" class="form-control my-input" placeholder="{{'texts.auction.from' | i18next}}" />
+                        <div id="slider-price" class="slider"></div>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="form-group">
-                        <input ng-model="search.address_to" class="form-control my-input" placeholder="{{'texts.auction.to' | i18next}}" />
+                    <div class="form-group no-label text-center">
+                        <label>
+                            {{'texts.search.expired' | i18next}}
+                            <input type="checkbox"
+                                      id="toggle-expired"
+                                      ng-checked="search.expired"
+                                      data-toggle="toggle"
+                                      data-onstyle="nohe"
+                                      data-on="{{'texts.search.expiredOn' | i18next}}"
+                                      data-off="{{'texts.search.expiredOff' | i18next}}"/>
+                        </label>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="form-group">
-                        <label class="form-control"><input ng-model="search.expired" type="checkbox"/> {{'texts.search.expired' | i18next}}</label>
-                    </div>
-                </div>
-
-                <div class="col-md-4 col-md-offset-4">
-                    <div class="form-group text-center">
-                        <div ng-click="makeSearch()" class="my-button normal-button big-button">Vyhledat</div>
+                <div class="col-md-4 text-center">
+                    <div class="form-group no-label2">
+                        <button type="submit" ng-click="makeSearch()" class="my-button normal-button">{{'texts.search.search' | i18next}}</button>
                     </div>
                 </div>
             </div>
@@ -120,6 +134,7 @@
         </div>
 	</div>
 </div>
+    {{afterRender()}}
 </m>
 
 <script type="text/ng-template" id="modal_bid_auction" class="modal-content">
