- oprava designových chyb kolem filtrování Item: 36, 37, 38, 39

--- a/app/components/Auction/List/auctionListView.html
+++ b/app/components/Auction/List/auctionListView.html
@@ -97,6 +97,7 @@
                                       id="toggle-expired"
                                       ng-checked="search.expired"
                                       data-toggle="toggle"
+                                       data-size="small"
                                       data-onstyle="nohe"
                                       data-on="{{'texts.search.expiredOn' | i18next}}"
                                       data-off="{{'texts.search.expiredOff' | i18next}}"/>
