--- a/app/components/Admin/Users/usersView.html
+++ b/app/components/Admin/Users/usersView.html
@@ -38,6 +38,8 @@
                           ng-class="(user.deleted) ? 'active' : ''"
                           title="{{ user.deleted ? 'UnDelete' : 'Delete'}}"
                           ng-click="DeleteUser(user.ID)"></span>
+                    <!--<span class="glyphicon glyphicon-remove-circle"
+                          ng-click="Invoice(user.ID)"></span> -->
                 </td>
             </tr>
         </table>
