--- a/app/components/Admin/Users/usersView.html
+++ b/app/components/Admin/Users/usersView.html
@@ -38,7 +38,7 @@
                           ng-class="(user.deleted) ? 'active' : ''"
                           title="{{ user.deleted ? 'UnDelete' : 'Delete'}}"
                           ng-click="DeleteUser(user.ID)"></span>
-                    <!--<span class="glyphicon glyphicon-remove-circle"
+                    <!--<span class="glyphicon glyphicon-heart"
                           ng-click="Invoice(user.ID)"></span> -->
                 </td>
             </tr>
