--- a/app/components/Account/Profile/Notification/notificationView.html
+++ b/app/components/Account/Profile/Notification/notificationView.html
@@ -1,89 +1,114 @@
 <m param="{route}">
-    <div class="notification-page wrapper">
+    <div class="notification-page">
         <h1>
             {{'texts.notification.main' | i18next}}
-            <span class="toggle-notification">
-                <label>{{'texts.notification.toggle' | i18next}}</label>
-                <input id="toggle-notification"
-                       type="checkbox"
-                       ng-checked="notificationEnabled"
-                       data-toggle="toggle"
-                       data-onstyle="nohe"
-                       data-on="{{'texts.notification.toggleOn' | i18next}}"
-                       data-off="{{'texts.notification.toggleOff' | i18next}}">
-            </span>
         </h1>
-        <div class="info-block">
-            <span class="glyphicon glyphicon-info-sign icon"></span> {{'texts.notification.info' | i18next}}
-        </div>
-        <div class="wrapper row">
-            <div class="notification-item col-lg-6">
-                <h3>{{'texts.notification.sender' | i18next}}</h3>
-                <table class="table table-striped">
-                    <tr ng-repeat="company in setCompanies">
-                        <td class="company">
-                            {{company}}
-                        </td>
-                        <td class="action">
+        <div class="wrapper">
+            <div class="col-lg-12">
+                <h3>{{'texts.notification.daily_notification_title' | i18next}}</h3>
+                <div class="notification-content">
+                    <span class="toggle-notification toggle-daily-notification">
+                        <label class="notification-label">{{'texts.notification.daily_toggle' | i18next}}</label>
+                        <input id="toggle-daily-notification"
+                               type="checkbox"
+                               ng-checked="dailyNotificationEnabled"
+                               data-toggle="toggle"
+                               data-onstyle="nohe"
+                               data-on="{{'texts.notification.toggleOn' | i18next}}"
+                               data-off="{{'texts.notification.toggleOff' | i18next}}">
+                    </span>
+                    <div class="info-block">
+                        <span class="glyphicon glyphicon-info-sign icon"></span> {{'texts.notification.daily_info' | i18next}}
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-12">
+                <h3>{{'texts.notification.notification_title' | i18next}}</h3>
+                <div class="notification-content">
+                    <span class="toggle-notification">
+                        <label class="notification-label">{{'texts.notification.toggle' | i18next}}</label>
+                        <input id="toggle-notification"
+                               type="checkbox"
+                               ng-checked="notificationEnabled"
+                               data-toggle="toggle"
+                               data-onstyle="nohe"
+                               data-on="{{'texts.notification.toggleOn' | i18next}}"
+                               data-off="{{'texts.notification.toggleOff' | i18next}}">
+                    </span>
+                    <div class="info-block">
+                        <span class="glyphicon glyphicon-info-sign icon"></span> {{'texts.notification.info' | i18next}}
+                    </div>
+                    <div class="wrapper row">
+                        <div class="notification-item col-lg-6">
+                            <h3>{{'texts.notification.sender' | i18next}}</h3>
+                            <table class="table table-striped">
+                                <tr ng-repeat="company in setCompanies">
+                                    <td class="company">
+                                        {{company}}
+                                    </td>
+                                    <td class="action">
                             <span title="{{'texts.tooltips.remove_company_notification_list' | i18next}}"
                                   class="glyphicon glyphicon-remove red btn" ng-click="removeCompany(company)">
                             </span>
-                        </td>
-                    </tr>
-                    <tr class="desktop-only" ng-show="toSelect.length && setCompanies.length < 3">
-                        <td>
-                            <label>
-                                {{'texts.notification.addLabel' | i18next}}
-                                <select ng-model="selectedCompany" ng-options="item as item for item in toSelect track by item">
-                                    <option value="" disabled>{{'texts.notification.empty' | i18next}}</option>
-                                </select>
-                            </label>
-                        </td>
-                        <td class="action">
-                            <div ng-class="selectedCompany ? '' : 'disabled'" class="btn normal-button" ng-click="addCompany(selectedCompany)">{{'texts.notification.addButton' | i18next}}</div>
-                        </td>
-                    </tr>
-                    <tr></tr>
-                    <tr class="phone-only text-center" ng-show="toSelect.length && setCompanies.length < 3">
-                        <td colspan="2">
-                            <label class="add-company-label">
-                                <span>{{'texts.notification.addLabel' | i18next}}</span>
-                                <select ng-model="selectedCompany" ng-options="item as item for item in toSelect track by item">
-                                    <option value="" disabled>{{'texts.notification.empty' | i18next}}</option>
-                                </select>
-                            </label>
-                            <div ng-class="selectedCompany ? '' : 'disabled'" class="btn normal-button add-company" ng-click="addCompany(selectedCompany)">{{'texts.notification.addButton' | i18next}}</div>
-                        </td>
-                    </tr>
-                    <tr></tr>
-                    <tr ng-show="setCompanies.length >= 3">
-                        <td>
-                            <span class="glyphicon glyphicon-info-sign icon"></span> {{'texts.notification.maximum' | i18next}}
-                        </td>
-                        <td></td>
-                    </tr>
-                </table>
-            </div>
-            <div class="notification-item col-lg-6">
-                <h3>{{'texts.notification.platform' | i18next}}</h3>
-                <table class="info-block table table-borderless">
-                    <tr>
-                        <td>
-                            {{'texts.notification.platformCreated' | i18next}}
-                        </td>
-                        <td class="action">
-                            <select ng-model="platform" id="platform" ng-change="platformChange()">
-                                <option value="1">{{'texts.notification.platforms.email' | i18next}}</option>
-                                <option value="2">{{'texts.notification.platforms.sms' | i18next}}</option>
-                                <option value="3">{{'texts.notification.platforms.both' | i18next}}</option>
-                            </select>
-                        </td>
-                    </tr>
-                </table>
-            </div>
-            <div class="notification-item off-info" ng-show="!notificationEnabled">
-                <span class="glyphicon glyphicon-info-sign icon"></span>
-                {{'texts.notification.notificationOff' | i18next}}
+                                    </td>
+                                </tr>
+                                <tr class="desktop-only" ng-show="toSelect.length && setCompanies.length < 3">
+                                    <td>
+                                        <label>
+                                            {{'texts.notification.addLabel' | i18next}}
+                                            <select ng-model="selectedCompany" ng-options="item as item for item in toSelect track by item">
+                                                <option value="" disabled>{{'texts.notification.empty' | i18next}}</option>
+                                            </select>
+                                        </label>
+                                    </td>
+                                    <td class="action">
+                                        <div ng-class="selectedCompany ? '' : 'disabled'" class="btn normal-button" ng-click="addCompany(selectedCompany)">{{'texts.notification.addButton' | i18next}}</div>
+                                    </td>
+                                </tr>
+                                <tr></tr>
+                                <tr class="phone-only text-center" ng-show="toSelect.length && setCompanies.length < 3">
+                                    <td colspan="2">
+                                        <label class="add-company-label">
+                                            <span>{{'texts.notification.addLabel' | i18next}}</span>
+                                            <select ng-model="selectedCompany" ng-options="item as item for item in toSelect track by item">
+                                                <option value="" disabled>{{'texts.notification.empty' | i18next}}</option>
+                                            </select>
+                                        </label>
+                                        <div ng-class="selectedCompany ? '' : 'disabled'" class="btn normal-button add-company" ng-click="addCompany(selectedCompany)">{{'texts.notification.addButton' | i18next}}</div>
+                                    </td>
+                                </tr>
+                                <tr></tr>
+                                <tr ng-show="setCompanies.length >= 3">
+                                    <td>
+                                        <span class="glyphicon glyphicon-info-sign icon"></span> {{'texts.notification.maximum' | i18next}}
+                                    </td>
+                                    <td></td>
+                                </tr>
+                            </table>
+                        </div>
+                        <div class="notification-item col-lg-6">
+                            <h3>{{'texts.notification.platform' | i18next}}</h3>
+                            <table class="info-block table table-borderless">
+                                <tr>
+                                    <td>
+                                        {{'texts.notification.platformCreated' | i18next}}
+                                    </td>
+                                    <td class="action">
+                                        <select ng-model="platform" id="platform" ng-change="platformChange()">
+                                            <option value="1">{{'texts.notification.platforms.email' | i18next}}</option>
+                                            <option value="2">{{'texts.notification.platforms.sms' | i18next}}</option>
+                                            <option value="3">{{'texts.notification.platforms.both' | i18next}}</option>
+                                        </select>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                        <div class="notification-item off-info" ng-show="!notificationEnabled">
+                            <span class="glyphicon glyphicon-info-sign icon"></span>
+                            {{'texts.notification.notificationOff' | i18next}}
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
