--- a/app/components/Admin/UsersActivities/usersActivitiesView.html
+++ b/app/components/Admin/UsersActivities/usersActivitiesView.html
@@ -1,15 +1,17 @@
 <m param="{route}">
     <h1>{{'texts.admin' | i18next}}</h1>
     <div class="col-md-12">
-        <h2>Transporters</h2>
+        <h2>Transporters ({{transportersActivities.length}})</h2>
         <table ng-if="transportersActivities.length" class="table table-striped table-responsive user-list">
             <tr>
                 <th>Username</th>
                 <th>Last bidded</th>
+                <th>Count of bidded</th>
             </tr>
             <tr class="item" ng-repeat="activity in transportersActivities">
                 <td>{{activity.user.username}}</td>
                 <td>{{getLastBidDate(activity)}}</td>
+                <td>{{activity.count_of_bidded_auction}}</td>
             </tr>
         </table>
         <div ng-if="!transportersActivities.length" class="text-center text-info">
@@ -17,16 +19,18 @@
         </div>
     </div>
     <div class="col-md-12">
-        <h2>Senders</h2>
+        <h2>Senders ({{sendersActivities.length}})</h2>
         <table ng-if="sendersActivities.length" class="table table-striped table-responsive user-list">
             <tr>
                 <th>Username</th>
                 <th>Last created</th>
+                <th>Count of created</th>
                 <th>Credit (share)</th>
             </tr>
             <tr class="item" ng-repeat="activity in sendersActivities">
                 <td>{{activity.user.username}}</td>
                 <td>{{getLastCreatedDate(activity)}}</td>
+                <td>{{activity.count_of_created_auction}}</td>
                 <td>{{activity.user.credit}}({{activity.user.share}})</td>
             </tr>
         </table>
@@ -35,17 +39,21 @@
         </div>
     </div>
     <div class="col-md-12">
-        <h2>Both</h2>
+        <h2>Both ({{bothActivities.length}})</h2>
         <table ng-if="bothActivities.length" class="table table-striped table-responsive user-list">
             <tr>
                 <th>Username</th>
                 <th>Last created</th>
                 <th>Last bidded</th>
+                <th>Count of bidded</th>
+                <th>Count of created</th>
             </tr>
             <tr class="item" ng-repeat="activity in bothActivities">
                 <td>{{activity.user.username}}</td>
                 <td>{{getLastCreatedDate(activity)}}</td>
                 <td>{{getLastBidDate(activity)}}</td>
+                <td>{{activity.count_of_bidded_auction}}</td>
+                <td>{{activity.count_of_created_auction}}</td>
             </tr>
         </table>
         <div ng-if="!bothActivities.length" class="text-center text-info">
@@ -53,7 +61,7 @@
         </div>
     </div>
     <div class="col-md-12">
-        <h2>Unknown</h2>
+        <h2>Unknown ({{unknownActivities.length}})</h2>
         <table ng-if="unknownActivities.length" class="table table-striped table-responsive user-list">
             <tr>
                 <th>Username</th>
