--- a/app/components/Admin/Users/usersView.html
+++ b/app/components/Admin/Users/usersView.html
@@ -8,38 +8,39 @@
         <button ng-click="SendTestSms()">TestSms</button>
         <button ng-click="ForFun()">Just4Fun</button>
         <!-- <button ng-click="SendNews()">SendNews</button> -->
-        <table ng-if="users.length" class="table table-striped table-responsive user-list">
-            <tr>
-                <th>Username</th>
-                <th>Email</th>
-                <th>Name</th>
-                <th>Surname</th>
-                <th>IČO</th>
-                <th>Credit</th>
-                <th>Actions</th>
-            </tr>
-            <tr class="item" ng-repeat="user in users">
-                <td>{{user.username}}</td>
-                <td>{{user.email}}</td>
-                <td>{{user.name}}</td>
-                <td>{{user.surname}}</td>
-                <td>{{user.ico}}</td>
-                <td>{{user.credit}}({{user.share}})</td>
-                <td>
-                    <span class="glyphicon glyphicon-ok-circle"
-                          ng-class="(user.verified) ? 'active' : ''"
-                          title="{{ user.verified ? 'UnVerify' : 'Verify'}}"
-                          ng-click="VerifyUser(user.ID)"></span>
-                    <span class="glyphicon glyphicon-ban-circle"
-                          ng-class="(user.banned) ? 'active' : ''"
-                          title="{{ user.banned ? 'UnBan' : 'Ban'}}"
-                          ng-click="BanUser(user.ID)"></span>
-                    <span class="glyphicon glyphicon-remove-circle"
-                          ng-class="(user.deleted) ? 'active' : ''"
-                          title="{{ user.deleted ? 'UnDelete' : 'Delete'}}"
-                          ng-click="DeleteUser(user.ID)"></span>
-                    <!--<span class="glyphicon glyphicon-heart"
-                          ng-click="Invoice(user.ID)"></span> -->
+        <!-- <button ng-click="Invoices()">Invoices</button> -->
+       <table ng-if="users.length" class="table table-striped table-responsive user-list">
+           <tr>
+               <th>Username</th>
+               <th>Email</th>
+               <th>Name</th>
+               <th>Surname</th>
+               <th>IČO</th>
+               <th>Credit</th>
+               <th>Actions</th>
+           </tr>
+           <tr class="item" ng-repeat="user in users">
+               <td>{{user.username}}</td>
+               <td>{{user.email}}</td>
+               <td>{{user.name}}</td>
+               <td>{{user.surname}}</td>
+               <td>{{user.ico}}</td>
+               <td>{{user.credit}}({{user.share}})</td>
+               <td>
+                   <span class="glyphicon glyphicon-ok-circle"
+                         ng-class="(user.verified) ? 'active' : ''"
+                         title="{{ user.verified ? 'UnVerify' : 'Verify'}}"
+                         ng-click="VerifyUser(user.ID)"></span>
+                   <span class="glyphicon glyphicon-ban-circle"
+                         ng-class="(user.banned) ? 'active' : ''"
+                         title="{{ user.banned ? 'UnBan' : 'Ban'}}"
+                         ng-click="BanUser(user.ID)"></span>
+                   <span class="glyphicon glyphicon-remove-circle"
+                         ng-class="(user.deleted) ? 'active' : ''"
+                         title="{{ user.deleted ? 'UnDelete' : 'Delete'}}"
+                         ng-click="DeleteUser(user.ID)"></span>
+                   <!--<span class="glyphicon glyphicon-heart"
+                         ng-click="Invoice(user.ID)"></span> -->
                 </td>
             </tr>
         </table>
