--- a/app/components/Admin/Users/usersView.html
+++ b/app/components/Admin/Users/usersView.html
@@ -2,11 +2,11 @@
     <h1>{{'texts.admin' | i18next}}</h1>
     <div class="col-md-12">
         <h2>{{'texts.users' | i18next}} ({{users.length}})</h2>
-        <input type="text" ng-model="id_transporter"/>
         <button ng-click="GetAuctionCache()">Get auction cache</button>
         <button ng-click="SendTestEmail()">TestEmail</button>
         <button ng-click="SendTestSms()">TestSms</button>
         <button ng-click="ForFun()">Just4Fun</button>
+        <input type="text" placeholder="Invoice number" id="invoice_number" />
         <!-- <button ng-click="SendNews()">SendNews</button> -->
         <!-- <button ng-click="Invoices()">Invoices</button> -->
        <table ng-if="users.length" class="table table-striped table-responsive user-list">
@@ -39,6 +39,9 @@
                          ng-class="(user.deleted) ? 'active' : ''"
                          title="{{ user.deleted ? 'UnDelete' : 'Delete'}}"
                          ng-click="DeleteUser(user.ID)"></span>
+                   <!--<div>
+                       <span class="glyphicon glyphicon-euro" ng-click="Reminde(user.ID)"></span>
+                   </div>-->
                    <!--<span class="glyphicon glyphicon-heart"
                          ng-click="Invoice(user.ID)"></span> -->
                 </td>
