--- a/app/components/Account/Profile/Invoices/invoicesView.html
+++ b/app/components/Account/Profile/Invoices/invoicesView.html
@@ -1,5 +1,34 @@
 <m param="{route}">
-  <div class="user-page">
+  <div class="user-page invoices">
       <h1>{{'texts.invoices.title' | i18next}}</h1>
+      <div class="wrapper">
+          <div class="col-lg-12">
+              <table class="table table-striped table-responsive user-list">
+                  <tr>
+                      <th>{{'texts.invoices.invoice_number' | i18next}}</th>
+                      <th>{{'texts.invoices.due_date' | i18next}}</th>
+                      <th>{{'texts.invoices.amount' | i18next}}</th>
+                      <th>{{'texts.invoices.state' | i18next}}</th>
+                      <th></th>
+                  </tr>
+                  <tr class="item" ng-repeat="item in invoices">
+                      <td>{{item.invoice_number}}</td>
+                      <td>{{createPrettyDate(item.due_date)}}</td>
+                      <td>{{item.amount}},- {{'texts.invoices.currency' | i18next}}</td>
+                      <td>
+                          <div ng-class="(item.paid) ? 'paid' : 'not-paid'">
+                              {{getState(item.paid)}}
+                          </div>
+                      </td>
+                      <td>
+                          <div ng-click="getPrintInvoice(item.ID)" class="download-text">
+                              <span>{{'texts.invoices.download' | i18next}}</span>
+                              <span class="glyphicon glyphicon glyphicon-download-alt"></span>
+                          </div>
+                      </td>
+                  </tr>
+              </table>
+          </div>
+      </div>
   </div>
 </m>
