--- a/app/components/Account/Profile/Invoices/invoicesView.html
+++ b/app/components/Account/Profile/Invoices/invoicesView.html
@@ -3,7 +3,8 @@
       <h1>{{'texts.invoices.title' | i18next}}</h1>
       <div class="wrapper">
           <div class="col-lg-12">
-              <table class="table table-striped table-responsive user-list">
+              <div ng-if="!invoices.length" class="text-center text-info">{{'texts.invoices.no_invoices' | i18next}}</div>
+              <table ng-if="invoices.length" class="table table-striped table-responsive user-list">
                   <tr>
                       <th>{{'texts.invoices.invoice_number' | i18next}}</th>
                       <th>{{'texts.invoices.due_date' | i18next}}</th>
